# aiops-nexus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: release.yml
app/: main.py
examples/elasticsearch/: README.md  docker-compose.yaml
examples/opensearch/: README.md  Vagrantfile
examples/opensearch/helm/: fluent-bit-values.yaml  opensearch-values.yaml
examples/opensearch/manifests/: aiops-nexus-deployment.yaml  ingress-nginx.yaml  unhealthy-app-deployment.yaml
examples/opensearch/scripts/: hit-unhealthy-app.sh  install-apps.sh  provision-microk8s.sh
examples/unhealthy-app/: Dockerfile  README.md  pyproject.toml
examples/unhealthy-app/app/: main.py
