[project]
name = "aiops-nexus"
version = "0.1.0"
description = ""
authors = [
    {name = "Nelson Sandoval",email = "techednelson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-redis (>=0.1.2,<0.2.0)",
    "langchain-core (>=0.3.35,<0.4.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


